# Polyvinyl

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md
components/vqf/: CMakeLists.txt  Kconfig  vqf.cpp  vqf.hpp
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/config/: Kconfig.config  config.h  consts.h
main/interfaces/: Kconfig.interfaces  adc-driver.cpp  adc-driver.h  config.h  i2c-driver.cpp  i2c-driver.h  i2c-register-interface.cpp  i2c-register-interface.h  register-interface.h
main/networking/: Kconfig.networking  connection.cpp  connection.h  packet-builder.cpp  packet-builder.h  packet-bundle.cpp  packet-bundle.h  packet-container.cpp  packet-container.h  packet-parser.cpp  packet-parser.h  packets.h  wifi-connection.cpp  wifi-connection.h  wifi-socket.cpp  wifi-socket.h
main/peripherals/: Kconfig.peripherals  battery.cpp  battery.h
main/sensors/: Kconfig.sensors  rest-calibration-detector.cpp  rest-calibration-detector.h  sensor-config.h  sensor-data-type.h  sensor-driver.cpp  sensor-driver.h  sensor-manager.cpp  sensor-manager.h  sensor-position.h  sensor-reader.cpp  sensor-reader.h
main/sensors/drivers/: Kconfig.drivers  Kconfig.icm45686  config-icm45686.h  icm45686.h  register-helper.h  sensor-descriptor.h  sensor-type.h
main/utils/: consts.h  event-observer.h  visitor.h
